fixed line spacing and mobile version

--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    
 }
 
 html {
@@ -26,6 +25,10 @@ header {
     border-radius: 5px;
 }
 
+h3, .projname {
+    font-family: 'Lora', serif;
+}
+
 .who {
     text-align: center;
     padding: 10px;
@@ -41,6 +44,7 @@ header {
 
 .bio {
     text-align: left;
+    line-height: 25px;
 }
 
 .whohead{
@@ -73,6 +77,7 @@ header {
     max-width: 500px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 30px;
     border-left: 5px solid rgb(5, 5, 27);
     background-color: rgba(191, 201, 209, 0.562);
     border-radius: 5px;
@@ -80,8 +85,9 @@ header {
 }
 
 .project {
-    border-bottom: 1px solid black;
-    padding: 10px;
+    border-top:  1px solid black;
+    border-bottom: 2px solid black;
+    padding: 10px 10px 10px 0;
     margin-bottom: 10px;
     display: flex;
     flex-direction: row;
@@ -90,6 +96,7 @@ header {
 
 .projectname {
     font-family: 'Lora', serif;
+    border: 2px solid purple;
 }
 
 .projectbutton {
@@ -102,6 +109,7 @@ header {
 }
 
 .screenshot {
+    height: 100px;
     -webkit-transition: width 2s, height 2s, -webkit-transform 2s; 
     transition: width 2s, height 2s, transform 2s;
 }
@@ -113,15 +121,11 @@ header {
 
 .description {
     width: 250px;
-    
+    line-height: 25px;
 }
 
 .projname {
     text-align: left; 
-}
-
-.screenshot {
-    height: 100px;
 }
 
 .logo {
@@ -202,6 +206,31 @@ nav button {
         margin-left: auto;
         margin-right: auto;
         border-radius: 5px;
+    }
+}
 
+@media screen and (max-width: 500px){
+    .project {
+        border-bottom: 1px solid black;
+        padding: 10px;
+        margin-bottom: 10px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .description {
+        width: 250px;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .screenshot {
+        margin-left: auto;
+        margin-right: auto;
+        width: 269px;
+        height: 130px;
+        -webkit-transition: width 2s, height 2s, -webkit-transform 2s; 
+        transition: width 2s, height 2s, transform 2s;
     }
 }
